# tilingtopoml-data-mofs

./: .env.template  .gitignore  pyproject.toml
src/tilingtopoml_data_mofs/: __init__.py  build_usmof_cifs.py  push_mofs.py
src/tilingtopoml_data_mofs/conf/: mofs.yaml
src/tilingtopoml_data_mofs/conf/datasets/: mofs.yaml
