[project]
name = "tilingtopoml-data-mofs"
version = "0.1.0"
description = "MOF dataset curation for tilingtopoml: PORMAKE-based CIF generation, clustering extraction, and HF push."
readme = "README.md"
authors = [
    { name = "Josh Goldman", email = "josheligoldman@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=4.7",
    "networkx>=3",
    "pymatgen>=2024",
    "hydra-core>=1.3",
    "python-dotenv>=1.0",
    "pandas>=2",
    "pyarrow>=14",
    "tqdm>=4",
    "pormake",
]

[tool.uv.sources]
pormake = { git = "https://github.com/Sangwon91/PORMAKE.git" }

[project.scripts]
tilingtopoml-push-mofs = "tilingtopoml_data_mofs.push_mofs:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
